# agentos-aws-template

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
.github/workflows/: ecr-images.yml
agents/: mcp_agent.py  pal.py
app/: config.yaml  main.py
db/: README.md  session.py  settings.py
infra/: .gitignore  dev_resources.py  prd_resources.py  settings.py
infra/example_secrets/: dev_api_secrets.yml  prd_api_secrets.yml  prd_db_secrets.yml
scripts/: auth_ecr.sh  build_image.sh  venv_setup.sh
