[project]
name = "agentos-aws"
version = "1.0.0"
description = "Agent platform with Postgres and AgentOS, deployed on AWS."
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os,slack]",
  "agno-infra",
  "aiohttp",
  "fastapi[standard]",
  "mcp",
  "openai",
  "parallel-web",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "docker",
  "boto3",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "app*", "db*", "evals*", "infra*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "agno.*", "httpx.*", "mcp.*", "sqlalchemy.*", "fastapi.*", "docker.*", "boto3.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
